Ensure that coverage data is only sent for successful unit test. Coveralls won't allow a rebuild of unit test job (that fails for trivial reasons).

--- a/.travis.yml
+++ b/.travis.yml
@@ -59,8 +59,7 @@ jobs:
   - stage: unittestandcoverage
     os: osx
     script:
-    - yarn run unit
-    - yarn run unit:coverage
+    - yarn run unit && yarn run unit:coverage
   - os: linux
     script:
     - yarn run unit
