--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
         "pack:main": "cross-env NODE_ENV=production webpack --progress --colors --config .electron-vue/webpack.main.config.js",
         "pack:renderer": "cross-env NODE_ENV=production webpack --progress --colors --config .electron-vue/webpack.renderer.config.js",
         "postinstall": "electron-builder install-app-deps",
-        "test-main": "mocha-webpack --webpack-config .electron-vue/webpack.test.config.js --glob *_spec.js test/main/specs",
         "test": "(yarn run unit || yarn -v) && yarn run e2e:impl",
         "unit": "yarn run clean && karma start test/unit/karma.conf.js",
         "e2e": "yarn run clean && yarn run pack && yarn run cucumber:postpack",
@@ -47,7 +46,8 @@
             "dist/electron/**/*"
         ],
         "dmg": {
-            "contents": [{
+            "contents": [
+                {
                     "x": 410,
                     "y": 150,
                     "type": "link",
@@ -76,13 +76,15 @@
         },
         "win": {
             "icon": "build/icons/icon.ico",
-            "target": [{
-                "target": "nsis",
-                "arch": [
-                    "x64",
-                    "ia32"
-                ]
-            }]
+            "target": [
+                {
+                    "target": "nsis",
+                    "arch": [
+                        "x64",
+                        "ia32"
+                    ]
+                }
+            ]
         },
         "appx": {
             "publisherDisplayName": "Queensland Cyber Infrastructure Foundation Ltd",
@@ -181,39 +183,38 @@
         "cucumber-html-reporter": "^4.0.2",
         "del": "^3.0.0",
         "devtron": "^1.4.0",
-        "electron": "^12.0.4",
+        "electron": "^3.1.13",
         "electron-builder": "^22.10.5",
         "electron-debug": "^1.5.0",
         "electron-devtools-installer": "^2.2.4",
         "eslint": "^5.7.0",
         "eslint-config-standard": "^12.0.0",
         "eslint-formatter-friendly": "^6.0.0",
-        "eslint-loader": "^2.1.1",
+        "eslint-loader": "^3.0.4",
         "eslint-plugin-import": "^2.14.0",
         "eslint-plugin-node": "^7.0.1",
         "eslint-plugin-promise": "^4.0.1",
         "eslint-plugin-standard": "^4.0.0",
         "eslint-plugin-vue": "^5.2.3",
         "exports-loader": "^0.7.0",
-        "file-loader": "^2.0.0",
+        "file-loader": "^6.2.0",
         "flush-promises": "^1.0.0",
         "html-webpack-include-assets-plugin": "^1.0.5",
-        "html-webpack-plugin": "^3.2.0",
+        "html-webpack-plugin": "^5.3.1",
         "json-loader": "^0.5.4",
         "jsonfile": "^4.0.0",
-        "karma": "^4.4.1",
+        "karma": "^6.3.2",
         "karma-coverage": "^1.1.2",
         "karma-coveralls": "^2.1.0",
-        "karma-electron": "^6.3.0",
+        "karma-electron": "^7.0.0",
         "karma-mocha": "^1.3.0",
         "karma-sinon-chai": "^2.0.2",
         "karma-sourcemap-loader": "^0.3.7",
         "karma-spec-reporter": "^0.0.32",
-        "karma-webpack": "^4.0.2",
-        "mini-css-extract-plugin": "^0.4.3",
+        "karma-webpack": "^5.0.0",
+        "mini-css-extract-plugin": "^1.5.0",
         "mocha": "^5.2.0",
         "mocha-lcov-reporter": "^1.3.0",
-        "mocha-webpack": "^1.1.0",
         "multispinner": "^0.2.1",
         "node-gyp": "^3.6.2",
         "node-loader": "^0.6.0",
@@ -222,26 +223,26 @@
         "regenerator-runtime": "^0.13.3",
         "replace-in-file": "^3.4.0",
         "require-dir": "^1.0.0",
-        "sinon": "^7.1.0",
-        "sinon-chai": "^3.2.0",
-        "sinon-test": "^2.4.0",
+        "sinon": "^9.0.0",
+        "sinon-chai": "^3.6.0",
+        "sinon-test": "^3.0.1",
         "spectron": "^4.0.0",
         "spectron-fake-menu": "^0.0.1",
         "style-loader": "^0.23.1",
         "stylus": "^0.54.5",
         "stylus-loader": "^3.0.2",
         "terser-webpack-plugin": "^2.3.1",
-        "url-loader": "^1.1.1",
+        "url-loader": "^4.1.1",
         "vue-html-loader": "^1.2.4",
-        "vue-loader": "^15.4.2",
+        "vue-loader": "^15.9.2",
         "vue-server-renderer": "^2.5.17",
         "vue-style-loader": "^4.1.2",
-        "webpack": "^4.20.2",
-        "webpack-cli": "^3.1.2",
-        "webpack-dev-server": "^3.1.11",
+        "webpack": "^5.35.0",
+        "webpack-cli": "^4.6.0",
+        "webpack-dev-server": "^3.11.2",
         "webpack-hot-middleware": "^2.24.2",
-        "webpack-merge": "^4.1.3",
-        "webpack-node-externals": "^1.7.2",
+        "webpack-merge": "^5.7.3",
+        "webpack-node-externals": "^2.5.2",
         "webpack-shell-plugin": "^0.5.0"
     }
 }
