--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
         "build:clean": "cross-env BUILD_TARGET=clean node .electron-vue/build.js",
         "clean": "cross-env BUILD_TARGET=cleanAll node .electron-vue/build.js",
         "sign:win:installer": "cross-env node ./signWinInstaller.js",
-        "dev": "node --trace-deprecation .electron-vue/dev-runner.js",
+        "dev": "node --trace-warnings .electron-vue/dev-runner.js",
         "lint": "eslint --ext .js,.vue -f ./node_modules/eslint-formatter-friendly src test",
         "lint:fix": "eslint --ext .js,.vue -f ./node_modules/eslint-formatter-friendly --fix src test",
         "pack": "yarn run pack:main && yarn run pack:renderer",
@@ -176,17 +176,17 @@
         "chalk": "^3.0.0",
         "copy-webpack-plugin": "^4.5.1",
         "core-js": "^3.6.0",
-        "coveralls": "^3.0.1",
+        "coveralls": "^3.1.0",
         "cross-env": "^5.1.6",
         "css-loader": "^3.4.0",
         "cucumber": "^6.0.5",
         "cucumber-html-reporter": "^4.0.2",
         "del": "^3.0.0",
         "devtron": "^1.4.0",
-        "electron": "^5.0.12",
+        "electron": "^12.0.0",
         "electron-builder": "^22.10.5",
-        "electron-debug": "^1.5.0",
-        "electron-devtools-installer": "^2.2.4",
+        "electron-debug": "^3.2.0",
+        "electron-devtools-installer": "^3.2.0",
         "eslint": "^5.7.0",
         "eslint-config-standard": "^12.0.0",
         "eslint-formatter-friendly": "^6.0.0",
@@ -204,12 +204,12 @@
         "json-loader": "^0.5.4",
         "jsonfile": "^4.0.0",
         "karma": "^6.3.2",
-        "karma-coverage": "^1.1.2",
+        "karma-coverage": "^2.0.3",
         "karma-coveralls": "^2.1.0",
         "karma-electron": "^6.3.4",
         "karma-mocha": "^1.3.0",
         "karma-sinon-chai": "^2.0.2",
-        "karma-sourcemap-loader": "^0.3.7",
+        "karma-sourcemap-loader": "^0.3.8",
         "karma-spec-reporter": "^0.0.32",
         "karma-webpack": "^5.0.0",
         "mini-css-extract-plugin": "^1.5.0",
