https://github.com/electron/electron/issues/15958: multiple instances in electron 12x for mac workaround. Added back mas target.

--- a/package.json
+++ b/package.json
@@ -61,7 +61,10 @@
             ]
         },
         "mac": {
-            "icon": "build/icons/icon.icns"
+            "icon": "build/icons/icon.icns",
+            "target": [
+                "mas"
+            ]
         },
         "mas": {
             "hardenedRuntime": false,
