--- a/package.json
+++ b/package.json
@@ -1,248 +1,245 @@
 {
-    "name": "DataCurator",
-    "version": "1.2.7",
-    "author": "Matt Mulholland <matt@redboxresearchdata.com.au>",
-    "description": "Data Curator is a simple desktop CSV editor to help describe, validate and share usable open data",
-    "license": "MIT",
-    "main": "./dist/electron/main.js",
-    "repository": "https://github.com/qcif/data-curator.git",
-    "scripts": {
-        "build": "node .electron-vue/build.js && electron-builder",
-        "build:sign:win:code": "node .electron-vue/build.js && electron-builder --config.win.sign=signWinCode.js",
-        "build:sign:win:all": "cross-env yarn run build:sign:win:code && yarn run sign:win:installer",
-        "build:sign:mac:macappstore": "cross-env yarn run build && bash build/resignAndPackage.sh",
-        "build:post": "cross-env node ./postbuild.js",
-        "build:dir": "node .electron-vue/build.js && electron-builder --dir",
-        "build:clean": "cross-env BUILD_TARGET=clean node .electron-vue/build.js",
-        "clean": "cross-env BUILD_TARGET=cleanAll node .electron-vue/build.js",
-        "sign:win:installer": "cross-env node ./signWinInstaller.js",
-        "dev": "node --trace-warnings .electron-vue/dev-runner.js",
-        "lint": "eslint --ext .js,.vue -f ./node_modules/eslint-formatter-friendly src test",
-        "lint:fix": "eslint --ext .js,.vue -f ./node_modules/eslint-formatter-friendly --fix src test",
-        "pack": "yarn run pack:main && yarn run pack:renderer",
-        "release:predraft": "node .electron-vue/build.js && electron-builder build --publish onTagOrDraft",
-        "release:pre": "node .electron-vue/build.js && electron-builder build --publish always --releaseType prerelease",
-        "pack:main": "cross-env NODE_ENV=production webpack --progress --colors --config .electron-vue/webpack.main.config.js",
-        "pack:renderer": "cross-env NODE_ENV=production webpack --progress --colors --config .electron-vue/webpack.renderer.config.js",
-        "postinstall": "electron-builder install-app-deps",
-        "test": "(yarn run unit || yarn -v) && yarn run e2e:impl",
-        "unit": "yarn run clean && karma start test/unit/karma.conf.js",
-        "e2e": "yarn run clean && yarn run pack && yarn run cucumber:postpack",
-        "e2e:all": "yarn run e2e test/features -f json:test/cucumber_report.json",
-        "e2e:impl": "yarn run e2e:all --tags @impl",
-        "cucumber:postpack": "cross-env BABEL_ENV=test nyc cucumber-js --require-module @babel/register",
-        "cucumber:postpack:dev": "cross-env BABEL_ENV=test cucumber-js --fail-fast --require-module @babel/register --tags @dev test/features",
-        "cucumber:report": "node test/cucumber-report.js",
-        "cucumber:report:badge": "node test/postreport.js",
-        "unit:coverage": "cat test/unit/coverage/lcov.info | coveralls"
+  "name": "DataCurator",
+  "version": "1.2.7",
+  "author": "Matt Mulholland <matt@redboxresearchdata.com.au>",
+  "description": "Data Curator is a simple desktop CSV editor to help describe, validate and share usable open data",
+  "license": "MIT",
+  "main": "./dist/electron/main.js",
+  "repository": "https://github.com/qcif/data-curator.git",
+  "scripts": {
+    "build": "node --trace-warnings .electron-vue/build.js && electron-builder",
+    "build:sign:win:code": "node .electron-vue/build.js && electron-builder --config.win.sign=signWinCode.js",
+    "build:sign:win:all": "cross-env yarn run build:sign:win:code && yarn run sign:win:installer",
+    "build:sign:mac:macappstore": "cross-env yarn run build -c.mac.target=mas && bash build/resignAndPackage.sh",
+    "build:post": "cross-env node ./postbuild.js",
+    "build:dir": "node .electron-vue/build.js && electron-builder --dir",
+    "build:clean": "cross-env BUILD_TARGET=clean node .electron-vue/build.js",
+    "clean": "cross-env BUILD_TARGET=cleanAll node .electron-vue/build.js",
+    "sign:win:installer": "cross-env node ./signWinInstaller.js",
+    "dev": "node --trace-warnings .electron-vue/dev-runner.js",
+    "lint": "eslint --ext .js,.vue -f ./node_modules/eslint-formatter-friendly src test",
+    "lint:fix": "eslint --ext .js,.vue -f ./node_modules/eslint-formatter-friendly --fix src test",
+    "pack": "yarn run pack:main && yarn run pack:renderer",
+    "release:predraft": "node .electron-vue/build.js && electron-builder build --publish onTagOrDraft",
+    "release:pre": "node .electron-vue/build.js && electron-builder build --publish always --releaseType prerelease",
+    "pack:main": "cross-env NODE_ENV=production webpack --progress --colors --config .electron-vue/webpack.main.config.js",
+    "pack:renderer": "cross-env NODE_ENV=production webpack --progress --colors --config .electron-vue/webpack.renderer.config.js",
+    "postinstall": "electron-builder install-app-deps",
+    "test": "(yarn run unit || yarn -v) && yarn run e2e:impl",
+    "unit": "yarn run clean && karma start test/unit/karma.conf.js",
+    "e2e": "yarn run clean && yarn run pack && yarn run cucumber:postpack",
+    "e2e:all": "yarn run e2e test/features -f json:test/cucumber_report.json",
+    "e2e:impl": "yarn run e2e:all --tags @impl",
+    "cucumber:postpack": "cross-env BABEL_ENV=test nyc cucumber-js --require-module @babel/register",
+    "cucumber:postpack:dev": "cross-env BABEL_ENV=test cucumber-js --fail-fast --require-module @babel/register --tags @dev test/features",
+    "cucumber:report": "node test/cucumber-report.js",
+    "cucumber:report:badge": "node test/postreport.js",
+    "unit:coverage": "cat test/unit/coverage/lcov.info | coveralls"
+  },
+  "build": {
+    "productName": "DataCurator",
+    "appId": "au.edu.qcif.datacurator",
+    "directories": {
+      "output": "build"
     },
-    "build": {
-        "productName": "DataCurator",
-        "appId": "au.edu.qcif.datacurator",
-        "directories": {
-            "output": "build"
+    "files": [
+      "dist/electron/**/*"
+    ],
+    "dmg": {
+      "contents": [
+        {
+          "x": 410,
+          "y": 150,
+          "type": "link",
+          "path": "/Applications"
         },
-        "files": [
-            "dist/electron/**/*"
-        ],
-        "dmg": {
-            "contents": [
-                {
-                    "x": 410,
-                    "y": 150,
-                    "type": "link",
-                    "path": "/Applications"
-                },
-                {
-                    "x": 130,
-                    "y": 150,
-                    "type": "file"
-                }
-            ]
-        },
-        "mac": {
-            "icon": "build/icons/icon.icns",
-            "target": [
-                "mas"
-            ]
-        },
-        "mas": {
-            "hardenedRuntime": false,
-            "provisioningProfile": "build/DataCuratorMacDistribution.provisionprofile",
-            "entitlements": "build/entitlements.mas.plist",
-            "entitlementsInherit": "build/entitlements.mas.inherit.plist",
-            "gatekeeperAssess": false,
-            "asarUnpack": []
-        },
-        "win": {
-            "icon": "build/icons/icon.ico",
-            "target": [
-                {
-                    "target": "nsis",
-                    "arch": [
-                        "x64",
-                        "ia32"
-                    ]
-                }
-            ]
-        },
-        "appx": {
-            "publisherDisplayName": "Queensland Cyber Infrastructure Foundation Ltd",
-            "publisher": "CN=...",
-            "identityName": "DataCurator"
-        },
-        "nsis": {
-            "runAfterFinish": false
-        },
-        "linux": {
-            "icon": "build/icons",
-            "target": "AppImage"
+        {
+          "x": 130,
+          "y": 150,
+          "type": "file"
         }
+      ]
     },
-    "dependencies": {
-        "archiver": "^2.1.1",
-        "autosize": "^4.0.2",
-        "axios": "^0.21.1",
-        "bootstrap": "3.4.1",
-        "components-font-awesome": "^5.0.6",
-        "csv": "^2.0.0",
-        "csv-sniffer": "^0.1.1",
-        "datapackage": "~1.1.9",
-        "detect-newline": "^3.0.0",
-        "electron-settings": "^3.2.0",
-        "escape-regexp": "^0.0.1",
-        "etl": "^0.5.12",
-        "fs-extra": "~7.0.0",
-        "handsontable": "^3.0.0",
-        "imports-loader": "^0.8.0",
-        "lodash": "^4.17.11",
-        "markdown-it": "^8.4.1",
-        "moment": "^2.22.2",
-        "pikaday": "^1.6.1",
-        "request": "^2.81.0",
-        "rxjs": "^6.5.5",
-        "sifter": "^0.5.3",
-        "slug": "^0.9.1",
-        "sortablejs": "^1.6.0",
-        "spectron-fake-dialog": "^0.0.1",
-        "svgo": "^1.0.5",
-        "tableschema": "~1.12.2",
-        "tmp": "^0.0.33",
-        "unzipper": "^0.8.14",
-        "vee-validate": "^2.0.9",
-        "vue": "^2.5.17",
-        "vue-async-computed": "^3.3.1",
-        "vue-directive-tooltip": "^1.4.5",
-        "vue-electron": "^1.0.6",
-        "vue-good-table": "^2.15.3",
-        "vue-router": "^3.0.1",
-        "vue-rx": "^5.0.0",
-        "vue-template-compiler": "^2.5.17",
-        "vuex": "^3.0.1",
-        "xlsx": "^0.13.0",
-        "yargs-parser": "^13.1.1",
-        "zeroclipboard": "^2.3.0"
+    "mac": {
+      "icon": "build/icons/icon.icns"
     },
-    "devDependencies": {
-        "@babel/core": "^7.0.0",
-        "@babel/plugin-proposal-class-properties": "^7.0.0",
-        "@babel/plugin-proposal-decorators": "^7.0.0",
-        "@babel/plugin-proposal-do-expressions": "^7.0.0",
-        "@babel/plugin-proposal-export-default-from": "^7.0.0",
-        "@babel/plugin-proposal-export-namespace-from": "^7.0.0",
-        "@babel/plugin-proposal-function-bind": "^7.0.0",
-        "@babel/plugin-proposal-function-sent": "^7.0.0",
-        "@babel/plugin-proposal-json-strings": "^7.0.0",
-        "@babel/plugin-proposal-logical-assignment-operators": "^7.0.0",
-        "@babel/plugin-proposal-nullish-coalescing-operator": "^7.0.0",
-        "@babel/plugin-proposal-numeric-separator": "^7.0.0",
-        "@babel/plugin-proposal-optional-chaining": "^7.0.0",
-        "@babel/plugin-proposal-pipeline-operator": "^7.0.0",
-        "@babel/plugin-proposal-throw-expressions": "^7.0.0",
-        "@babel/plugin-syntax-dynamic-import": "^7.0.0",
-        "@babel/plugin-syntax-import-meta": "^7.0.0",
-        "@babel/plugin-transform-runtime": "^7.0.0",
-        "@babel/preset-env": "^7.0.0",
-        "@babel/register": "^7.0.0",
-        "@babel/runtime-corejs3": "^7.7.7",
-        "@vue/test-utils": "1.0.0-beta.28",
-        "babel-eslint": "^9.0.0",
-        "babel-loader": "^8.0.0",
-        "babel-plugin-istanbul": "^5.1.0",
-        "babel-plugin-rewire": "^1.2.0",
-        "cfonts": "2.5.0",
-        "chai": "^4.1.2",
-        "chai-as-promised": "^7.1.1",
-        "chalk": "^3.0.0",
-        "copy-webpack-plugin": "^8.1.1",
-        "core-js": "^3.6.0",
-        "coveralls": "^3.1.0",
-        "cross-env": "^5.1.6",
-        "css-loader": "^3.4.0",
-        "cucumber": "^6.0.5",
-        "cucumber-html-reporter": "^4.0.2",
-        "del": "^3.0.0",
-        "devtron": "^1.4.0",
-        "electron": "^12.0.0",
-        "electron-builder": "^22.10.5",
-        "electron-debug": "^3.2.0",
-        "electron-devtools-installer": "^3.2.0",
-        "eslint": "^5.7.0",
-        "eslint-config-standard": "^12.0.0",
-        "eslint-formatter-friendly": "^6.0.0",
-        "eslint-loader": "^3.0.4",
-        "eslint-plugin-import": "^2.14.0",
-        "eslint-plugin-node": "^7.0.1",
-        "eslint-plugin-promise": "^4.0.1",
-        "eslint-plugin-standard": "^4.0.0",
-        "eslint-plugin-vue": "^5.2.3",
-        "exports-loader": "^0.7.0",
-        "file-loader": "^6.2.0",
-        "flush-promises": "^1.0.0",
-        "html-webpack-include-assets-plugin": "^2.0.0",
-        "html-webpack-plugin": "^5.3.1",
-        "json-loader": "^0.5.4",
-        "jsonfile": "^4.0.0",
-        "karma": "^6.3.2",
-        "karma-coverage": "^2.0.3",
-        "karma-coveralls": "^2.1.0",
-        "karma-electron": "^6.3.4",
-        "karma-mocha": "^1.3.0",
-        "karma-sinon-chai": "^2.0.2",
-        "karma-sourcemap-loader": "^0.3.8",
-        "karma-spec-reporter": "^0.0.32",
-        "karma-webpack": "^5.0.0",
-        "mini-css-extract-plugin": "^1.5.0",
-        "mocha": "^5.2.0",
-        "mocha-lcov-reporter": "^1.3.0",
-        "multispinner": "^0.2.1",
-        "node-gyp": "^3.6.2",
-        "node-loader": "^0.6.0",
-        "nyc": "^15.1.0",
-        "readme-badger": "^0.3.0",
-        "regenerator-runtime": "^0.13.3",
-        "replace-in-file": "^3.4.0",
-        "require-dir": "^1.0.0",
-        "sinon": "^9.0.0",
-        "sinon-chai": "^3.6.0",
-        "sinon-test": "^3.0.1",
-        "spectron": "^4.0.0",
-        "spectron-fake-menu": "^0.0.1",
-        "style-loader": "^0.23.1",
-        "stylus": "^0.54.5",
-        "stylus-loader": "^3.0.2",
-        "terser-webpack-plugin": "^5.1.1",
-        "url-loader": "^4.1.1",
-        "vue-html-loader": "^1.2.4",
-        "vue-loader": "^15.9.2",
-        "vue-server-renderer": "^2.5.17",
-        "vue-style-loader": "^4.1.2",
-        "webpack": "^5.35.1",
-        "webpack-cli": "^4.6.0",
-        "webpack-dev-server": "^3.11.2",
-        "webpack-hot-middleware": "^2.24.2",
-        "webpack-merge": "^5.7.3",
-        "webpack-node-externals": "^2.5.2",
-        "webpack-shell-plugin": "^0.5.0"
+    "mas": {
+      "hardenedRuntime": false,
+      "provisioningProfile": "build/DataCuratorMacDistribution.provisionprofile",
+      "entitlements": "build/entitlements.mas.plist",
+      "entitlementsInherit": "build/entitlements.mas.inherit.plist",
+      "gatekeeperAssess": false,
+      "asarUnpack": []
+    },
+    "win": {
+      "icon": "build/icons/icon.ico",
+      "target": [
+        {
+          "target": "nsis",
+          "arch": [
+            "x64",
+            "ia32"
+          ]
+        }
+      ]
+    },
+    "appx": {
+      "publisherDisplayName": "Queensland Cyber Infrastructure Foundation Ltd",
+      "publisher": "CN=...",
+      "identityName": "DataCurator"
+    },
+    "nsis": {
+      "runAfterFinish": false
+    },
+    "linux": {
+      "icon": "build/icons",
+      "target": "AppImage"
     }
+  },
+  "dependencies": {
+    "archiver": "^2.1.1",
+    "autosize": "^4.0.2",
+    "axios": "^0.21.1",
+    "bootstrap": "3.4.1",
+    "components-font-awesome": "^5.0.6",
+    "csv": "^2.0.0",
+    "csv-sniffer": "^0.1.1",
+    "datapackage": "~1.1.9",
+    "detect-newline": "^3.0.0",
+    "electron-settings": "^3.2.0",
+    "escape-regexp": "^0.0.1",
+    "etl": "^0.5.12",
+    "fs-extra": "~7.0.0",
+    "handsontable": "^3.0.0",
+    "imports-loader": "^0.8.0",
+    "lodash": "^4.17.11",
+    "markdown-it": "^8.4.1",
+    "moment": "^2.22.2",
+    "pikaday": "^1.6.1",
+    "request": "^2.81.0",
+    "rxjs": "^6.5.5",
+    "sifter": "^0.5.3",
+    "slug": "^0.9.1",
+    "sortablejs": "^1.6.0",
+    "spectron-fake-dialog": "^0.0.1",
+    "svgo": "^1.0.5",
+    "tableschema": "~1.12.2",
+    "tmp": "^0.0.33",
+    "unzipper": "^0.8.14",
+    "vee-validate": "^2.0.9",
+    "vue": "^2.5.17",
+    "vue-async-computed": "^3.3.1",
+    "vue-directive-tooltip": "^1.4.5",
+    "vue-electron": "^1.0.6",
+    "vue-good-table": "^2.15.3",
+    "vue-router": "^3.0.1",
+    "vue-rx": "^5.0.0",
+    "vue-template-compiler": "^2.5.17",
+    "vuex": "^3.0.1",
+    "xlsx": "^0.13.0",
+    "yargs-parser": "^13.1.1",
+    "zeroclipboard": "^2.3.0"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.0.0",
+    "@babel/plugin-proposal-class-properties": "^7.0.0",
+    "@babel/plugin-proposal-decorators": "^7.0.0",
+    "@babel/plugin-proposal-do-expressions": "^7.0.0",
+    "@babel/plugin-proposal-export-default-from": "^7.0.0",
+    "@babel/plugin-proposal-export-namespace-from": "^7.0.0",
+    "@babel/plugin-proposal-function-bind": "^7.0.0",
+    "@babel/plugin-proposal-function-sent": "^7.0.0",
+    "@babel/plugin-proposal-json-strings": "^7.0.0",
+    "@babel/plugin-proposal-logical-assignment-operators": "^7.0.0",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.0.0",
+    "@babel/plugin-proposal-numeric-separator": "^7.0.0",
+    "@babel/plugin-proposal-optional-chaining": "^7.0.0",
+    "@babel/plugin-proposal-pipeline-operator": "^7.0.0",
+    "@babel/plugin-proposal-throw-expressions": "^7.0.0",
+    "@babel/plugin-syntax-dynamic-import": "^7.0.0",
+    "@babel/plugin-syntax-import-meta": "^7.0.0",
+    "@babel/plugin-transform-runtime": "^7.0.0",
+    "@babel/preset-env": "^7.0.0",
+    "@babel/register": "^7.0.0",
+    "@babel/runtime-corejs3": "^7.7.7",
+    "@vue/test-utils": "1.0.0-beta.28",
+    "babel-eslint": "^9.0.0",
+    "babel-loader": "^8.0.0",
+    "babel-plugin-istanbul": "^5.1.0",
+    "babel-plugin-rewire": "^1.2.0",
+    "cfonts": "2.5.0",
+    "chai": "^4.1.2",
+    "chai-as-promised": "^7.1.1",
+    "chalk": "^3.0.0",
+    "copy-webpack-plugin": "^8.1.1",
+    "core-js": "^3.6.0",
+    "coveralls": "^3.1.0",
+    "cross-env": "^5.1.6",
+    "css-loader": "^3.4.0",
+    "cucumber": "^6.0.5",
+    "cucumber-html-reporter": "^4.0.2",
+    "del": "^3.0.0",
+    "devtron": "^1.4.0",
+    "electron": "^12.0.0",
+    "electron-builder": "^22.10.5",
+    "electron-debug": "^3.2.0",
+    "electron-devtools-installer": "^3.2.0",
+    "eslint": "^5.7.0",
+    "eslint-config-standard": "^12.0.0",
+    "eslint-formatter-friendly": "^6.0.0",
+    "eslint-loader": "^3.0.4",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-node": "^7.0.1",
+    "eslint-plugin-promise": "^4.0.1",
+    "eslint-plugin-standard": "^4.0.0",
+    "eslint-plugin-vue": "^5.2.3",
+    "exports-loader": "^0.7.0",
+    "file-loader": "^6.2.0",
+    "flush-promises": "^1.0.0",
+    "html-webpack-include-assets-plugin": "^2.0.0",
+    "html-webpack-plugin": "^5.3.1",
+    "json-loader": "^0.5.4",
+    "jsonfile": "^4.0.0",
+    "karma": "^6.3.2",
+    "karma-coverage": "^2.0.3",
+    "karma-coveralls": "^2.1.0",
+    "karma-electron": "^6.3.4",
+    "karma-mocha": "^1.3.0",
+    "karma-sinon-chai": "^2.0.2",
+    "karma-sourcemap-loader": "^0.3.8",
+    "karma-spec-reporter": "^0.0.32",
+    "karma-webpack": "^5.0.0",
+    "mini-css-extract-plugin": "^1.5.0",
+    "mocha": "^5.2.0",
+    "mocha-lcov-reporter": "^1.3.0",
+    "multispinner": "^0.2.1",
+    "node-gyp": "^3.6.2",
+    "node-loader": "^0.6.0",
+    "nyc": "^15.1.0",
+    "readme-badger": "^0.3.0",
+    "regenerator-runtime": "^0.13.3",
+    "replace-in-file": "^3.4.0",
+    "require-dir": "^1.0.0",
+    "sinon": "^9.0.0",
+    "sinon-chai": "^3.6.0",
+    "sinon-test": "^3.0.1",
+    "spectron": "^4.0.0",
+    "spectron-fake-menu": "^0.0.1",
+    "style-loader": "^0.23.1",
+    "stylus": "^0.54.5",
+    "stylus-loader": "^3.0.2",
+    "terser-webpack-plugin": "^5.1.1",
+    "url-loader": "^4.1.1",
+    "vue-html-loader": "^1.2.4",
+    "vue-loader": "^15.9.2",
+    "vue-server-renderer": "^2.5.17",
+    "vue-style-loader": "^4.1.2",
+    "webpack": "^5.35.1",
+    "webpack-cli": "^4.6.0",
+    "webpack-dev-server": "^3.11.2",
+    "webpack-hot-middleware": "^2.24.2",
+    "webpack-merge": "^5.7.3",
+    "webpack-node-externals": "^2.5.2",
+    "webpack-shell-plugin": "^0.5.0"
+  }
 }
