updated test features/fixtures from manual testing on branch 'publish_mac_store_version'. updated to node 14. updated README to include availability from Mac app store. Updated build scripts, especially mac-store config, from 'publish_mac_store_version'. Fixed axios security warning (merged from 'publish_mac_store' branch). Updated babel and CI to reflect node version.

--- a/.babelrc
+++ b/.babelrc
@@ -6,7 +6,9 @@
         [
           "@babel/preset-env",
           {
-          "targets": { "node": 8 },
+            "targets": {
+              "node": 14
+            },
             "modules": false,
             "useBuiltIns": "entry",
             "corejs": 3
@@ -50,7 +52,7 @@
           "@babel/preset-env",
           {
             "targets": {
-              "node": 8
+              "node": 14
             },
             "useBuiltIns": "entry",
             "corejs": 3
@@ -93,7 +95,7 @@
           "@babel/preset-env",
           {
           "targets": {
-            "node": 8
+              "node": 14
             },
             "modules": false,
             "useBuiltIns": "entry",
