corrected 'color' arg for webpack.

--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
     "pack": "yarn run pack:main && yarn run pack:renderer",
     "release:predraft": "node .electron-vue/build.js && electron-builder build --publish onTagOrDraft",
     "release:pre": "node .electron-vue/build.js && electron-builder build --publish always --releaseType prerelease",
-    "pack:main": "cross-env NODE_ENV=production webpack --progress --colors --config .electron-vue/webpack.main.config.js",
-    "pack:renderer": "cross-env NODE_ENV=production webpack --progress --colors --config .electron-vue/webpack.renderer.config.js",
+    "pack:main": "cross-env NODE_ENV=production webpack --progress --color --config .electron-vue/webpack.main.config.js",
+    "pack:renderer": "cross-env NODE_ENV=production webpack --progress --color --config .electron-vue/webpack.renderer.config.js",
     "postinstall": "electron-builder install-app-deps",
     "test": "(yarn run unit || yarn -v) && yarn run e2e:impl",
     "unit": "yarn run clean && karma start test/unit/karma.conf.js",
