--- a/package.json
+++ b/package.json
@@ -162,6 +162,7 @@
     "@babel/preset-env": "^7.0.0",
     "@babel/register": "^7.0.0",
     "@babel/runtime-corejs3": "^7.7.7",
+    "@cucumber/cucumber": "^7.3.1",
     "@vue/test-utils": "1.0.0-beta.28",
     "babel-eslint": "^9.0.0",
     "babel-loader": "^8.0.0",
@@ -176,8 +177,7 @@
     "coveralls": "^3.1.0",
     "cross-env": "^5.1.6",
     "css-loader": "^3.4.0",
-    "cucumber": "^6.0.5",
-    "cucumber-html-reporter": "^4.0.2",
+    "cucumber-html-reporter": "^5.5.0",
     "del": "^3.0.0",
     "devtron": "^1.4.0",
     "electron": "^12.0.0",
@@ -223,7 +223,7 @@
     "sinon": "^9.0.0",
     "sinon-chai": "^3.6.0",
     "sinon-test": "^3.0.1",
-    "spectron": "^4.0.0",
+    "spectron": "^15.0.0",
     "spectron-fake-menu": "^0.0.1",
     "style-loader": "^0.23.1",
     "stylus": "^0.54.5",
