--- a/.babelrc
+++ b/.babelrc
@@ -17,6 +17,7 @@
       ],
       "plugins": [
         "istanbul",
+        "rewire",
         "@babel/plugin-syntax-dynamic-import",
         "@babel/plugin-syntax-import-meta",
         "@babel/plugin-proposal-class-properties",
