--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "e2e:impl": "yarn run e2e:all --tags @impl",
     "cucumber:postpack": "cross-env BABEL_ENV=test nyc cucumber-js --require-module @babel/register",
     "cucumber:postpack:dev": "cross-env BABEL_ENV=test cucumber-js --fail-fast --require-module @babel/register --tags @dev test/features",
-    "cucumber:postpack:fail-fast-impl": "cross-env BABEL_ENV=test nyc cucumber-js --fail-fast --require-module @babel/register --tags @impl test/features -f json:test/cucumber_report.json",
+    "cucumber:postpack:fail-fast-impl": "cross-env BABEL_ENV=test nyc cucumber-js --fail-fast --require-module @babel/register --tags @impl test/features",
     "cucumber:report": "node test/cucumber-report.js",
     "cucumber:report:badge": "node test/postreport.js",
     "unit:coverage": "cat test/unit/coverage/lcov.info | coveralls"
