--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,10 @@
 .DS_Store
 dist/electron/*
-build/
+build/*
 !build/icons
 #!build/data-curator*.*
 !build/entitlements.mas.*
+!build/resignAndPackage.sh
 node_modules/
 npm-debug.log
 npm-debug.log.*
