--- a/appveyor.yml
+++ b/appveyor.yml
@@ -26,7 +26,7 @@ init:
   - git config --global core.autocrlf input
 
 install:
-  - ps: Install-Product node 14 x64
+  - ps: Install-Product node 14 --LTS x64
   - choco upgrade yarn
   - git reset --hard HEAD
   - yarn
