--- a/appveyor.yml
+++ b/appveyor.yml
@@ -48,13 +48,26 @@ for:
     - yarn
     - node --version
     - yarn autoclean --force
+  before_build:
     - yarn run clean
-    - yarn run lint
     - if defined APPVEYOR_PULL_REQUEST_NUMBER ECHO PR %APPVEYOR_PULL_REQUEST_NUMBER%
     - if defined APPVEYOR_PULL_REQUEST_NUMBER yarn run unit
     - if defined APPVEYOR_PULL_REQUEST_NUMBER yarn run e2e:impl
   test: off
+  deploy: off
+  configuration: Install
+-
+  matrix:
+    only:
+      - job_name: Macosx build
+      - job_name: Linux build
+  install:
+    - yarn
+    - node --version
+    - yarn autoclean --force
+    - yarn run clean
   build: off
+  test: off
   deploy: off
   configuration: Install
 -
@@ -92,7 +105,7 @@ for:
     - git add test/cucumber_report.html test/cucumber_report.json README.md
     - git commit -m "appveyor Updating branch from appveyor build."
     - git push origin ci
-  build: off
+
   deploy: off
   configuration: Mergeandtest
 -
@@ -113,6 +126,7 @@ for:
     only:
       - job_name: Windows build
       - job_name: Macosx build
+      - job_name: Linux build
   branches:
     only:
       - post-max-e2e-fix
