--- a/appveyor.yml
+++ b/appveyor.yml
@@ -24,25 +24,33 @@ environment:
     secure: faAiDKB0AuOoVTQrRYs/91SSOM0fgPTc13Sz/Oiu6CniFpShg/8a2+hZ2inzMFde
   matrix:
   - job_name: Windows build
+    job_group: OS_job
     appveyor_build_worker_image: Visual Studio 2017
   - job_name: Linux build
     appveyor_build_worker_image: Ubuntu1804
+    job_group: OS_job
   - job_name: Macosx build
     appveyor_build_worker_image: macOS-BigSur
+    job_group: OS_job
+  - job_name: Lint
+    job_depends_on: OS_job
 
+## for linux and osx
 stack: node $nodejs_version
 
 skip_commits:
   message: /^appveyor Updating branch from appveyor build.$/
 
-init:
-  - git config --global core.autocrlf input
+#init:
+#  - git config --global core.autocrlf input
 
 for:
 -
   matrix:
     only:
       - job_name: Windows build
+  init:
+    - git config --global core.autocrlf input
   install:
     - ps: Install-Product node $env:nodejs_version $env:plat
     - choco upgrade yarn
@@ -82,7 +90,6 @@ for:
     - node --version
     - yarn autoclean --force
     - yarn run clean
-  build: off
   test: off
   deploy: off
   configuration: Install
@@ -140,14 +147,12 @@ for:
 -
   matrix:
     only:
-      - job_name: Windows build
-      - job_name: Macosx build
-      - job_name: Linux build
+      - job_name: Build
   branches:
     only:
       - post-max-e2e-fix
-  test_script:
+  build_script:
     - yarn run lint
-  build: off
+  test: off
   deploy: off
-  configuration: Poc
+  configuration: Lint
