--- a/appveyor.yml
+++ b/appveyor.yml
@@ -32,8 +32,6 @@ environment:
   - job_name: Macosx build
     appveyor_build_worker_image: macOS-BigSur
     job_group: OS_job
-  - job_name: Lint
-    job_depends_on: OS_job
 
 ## for linux and osx
 stack: node $nodejs_version
@@ -62,6 +60,7 @@ for:
     - if defined APPVEYOR_PULL_REQUEST_NUMBER ECHO PR %APPVEYOR_PULL_REQUEST_NUMBER%
     - if defined APPVEYOR_PULL_REQUEST_NUMBER yarn run unit
     - if defined APPVEYOR_PULL_REQUEST_NUMBER yarn run e2e:impl
+  build: off
   test: off
   deploy: off
   configuration: Install
@@ -74,6 +73,7 @@ for:
     - node --version
     - yarn autoclean --force
     - yarn run clean
+  build: off
   test: off
   deploy: off
   configuration: Install
@@ -87,6 +87,7 @@ for:
     - node --version
     - yarn autoclean --force
     - yarn run clean
+  build: off
   test: off
   deploy: off
   configuration: Install
@@ -144,7 +145,7 @@ for:
 -
   matrix:
     only:
-      - job_name: Lint
+      - job_group: OS_job
   branches:
     only:
       - post-max-e2e-fix
